--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.153.0"
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.153.0",
+    "three-obj-loader": "^1.1.3"
   }
 }
