--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
-    "@react-three/fiber": "^8.13.3",
     "@prisma/client": "^4.16.1",
+    "@react-three/fiber": "^8.13.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
@@ -23,5 +23,8 @@
     "react-three-fiber": "^6.0.13",
     "three": "^0.153.0",
     "three-obj-loader": "^1.1.3"
+  },
+  "devDependencies": {
+    "csv": "^6.3.1"
   }
 }
