--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
-    "@react-three/fiber": "^8.13.3",
     "@prisma/client": "^4.16.1",
+    "@react-three/drei": "^9.77.3",
+    "@react-three/fiber": "^8.13.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
