--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-three-fiber": "^6.0.13",
     "three": "^0.153.0",
     "three-obj-loader": "^1.1.3"
+  },
+  "devDependencies": {
+    "xlsx": "^0.18.5"
   }
 }
